Create mode selection to select either Pit Collection or SEALs mode. (#31)
* Add ModeSelectionActivity to AndroidManifest.

* Add mode_selection xml.

* Add IDs to mode selection buttons.

* Add SEALs Collection Activity.

* Add Constants for mode selection enums and manageStorage for
sharedPreferences usage.

* Make ModeSelectionActivity to select collection mode and modify intent
of selecting a team in TeamListActivity.

* Change collection names from objective to subjective.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">pit-collection-2020</string>
+    <string name="pit_collection_mode">Objective Pit Collection</string>
+    <string name="seals_collection_mode">Subjective Pit Collection (SEALs)</string>
     <string-array name="drivetrain_array">
         <item>Drivetrain</item>
         <item>Tank</item>
