Implement Camera/Picture function (#27)
* increase sdk version to use CameraX

* add picture_types array to populate spinner

* add purple, green, and dark gray to colors.xml

* add camera symbol into drawable directory

* create camera preview and screen layout

* create createSpinner function in a file to be referenced throughout the app

* add Camera activity and camera permissions into Manifest

* add camera button to collection screen

* implement createSpinner function and add the cameraButton

* add camera permissions into requestPermissions file

* Request Camera in TeamsListActivity
calls the RequestCamera function when the app opens

* create CameraActivity

* add compile options back into the build.gradle

* fix empty file name after team num

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,11 @@
         <item>Neo</item>
         <item>Falcon</item>
     </string-array>
+    <string-array name="picture_types">
+        <item>Full Robot</item>
+        <item>Drivetrain</item>
+        <item>Mechanism</item>
+    </string-array>
     <string name="motor_number"># of Motors</string>
     <string name="ground_intake">Can Ground Intake</string>
     <string name="no_ground_intake">Can NOT Ground Intake</string>
