--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,15 @@
     <string name="app_name">pit-collection-2020</string>
     <string name="pit_collection_mode">Objective Pit Collection</string>
     <string name="seals_collection_mode">Subjective Pit Collection (SEALs)</string>
+    <string name="FILLER_TEAM">Team Number</string>
+    <string name="motor_number"># of Motors</string>
+    <string name="ground_intake">Can Ground Intake</string>
+    <string name="no_ground_intake">Can NOT Ground Intake</string>
+    <string name="cross_trench">Can Cross Trench</string>
+    <string name="no_cross_trench">Can NOT Cross Trench</string>
+    <string name="team_number">1678</string>
+    <string name="Save">Save Button</string>
+
     <string-array name="drivetrain_array">
         <item>Drivetrain</item>
         <item>Tank</item>
@@ -21,10 +30,4 @@
         <item>Drivetrain</item>
         <item>Mechanism</item>
     </string-array>
-    <string name="motor_number"># of Motors</string>
-    <string name="ground_intake">Can Ground Intake</string>
-    <string name="no_ground_intake">Can NOT Ground Intake</string>
-    <string name="cross_trench">Can Cross Trench</string>
-    <string name="no_cross_trench">Can NOT Cross Trench</string>
-    <string name="team_number">1678</string>
 </resources>
