Make toolbar with version number and collection mode (#61)
* Make action bars with version # and mode

* Make mode selection display version number.

* Merge Lucca's branch into mine and add version string.

* Change version number into a string

* Add header to CameraActivity and PictureConfirmation.

Co-authored-by: luccambraudagan <55220443+luccambraudagan@users.noreply.github.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
     <string name="Save">Save Button</string>
     <string name="error_back_reset">Do you want to reset the collection mode?</string>
     <string name="error_back">Please long press to reset the collection mode</string>
+    <string name="tv_version_num">Version: %1$s</string>
+    <string name="tv_objective_version">Version: %1$s, Objective Collection</string>
+    <string name="tv_subjective_version">Version: %1$s, Subjective Collection</string>
 
     <string-array name="drivetrain_array">
         <item>Drivetrain</item>
