Change mechanism to specific names in pictures (#66)
* Change mechanism to specific names in pictures

* Delete mechanism in spinner

Co-authored-by: luccambraudagan <luccambraudagan@users.noreply.github.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,9 @@
     <string-array name="picture_types">
         <item>Full Robot</item>
         <item>Drivetrain</item>
-        <item>Mechanism</item>
+        <item>Intake</item>
+        <item>Indexer</item>
+        <item>Shooter</item>
+        <item>Climber</item>
     </string-array>
 </resources>
