Add picture type to picture confirmation screen. (#71)
* Add picture type to confirmation screen.

* Remove 2020 from app name.

* Update TeamListActivity to remove warnings.

* Update version number to 2.0.2.

* Add picture type to confirmation screen.

* Display correctly capitalized and formatted picture type name.

* Remove internal storage permissions.

* Add requestLegacyExternalStorage to AndroidManifest.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">pit-collection-2020</string>
+    <string name="app_name">pit-collection</string>
     <string name="collection_objective">Objective Pit Collection</string>
     <string name="collection_subjective">Subjective Pit Collection (SEALs)</string>
     <string name="FILLER_TEAM">Team Number</string>
